Bunch of changes: * Fix hyphenation * Remove monochrome.py since that’s only for minted and not relevant here. * Fix dark mode code presentation * Try out Clicky

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -78,13 +78,49 @@ button {
     padding: 0;  // counteract weird iOS bullshit
 }
 
+// Trying out some fancy hyphenation options from
+// https://medium.com/clear-left-thinking/all-you-need-to-know-about-hyphenation-in-css-2baee2d89179
+@mixin hyphens {
+    -webkit-hyphens: auto;
+    -webkit-hyphenate-limit-before: 3;
+    -webkit-hyphenate-limit-after: 3;
+    -webkit-hyphenate-limit-chars: 6 3 3;
+    -webkit-hyphenate-limit-lines: 2;
+    -webkit-hyphenate-limit-last: always;
+    -webkit-hyphenate-limit-zone: 8%;
+
+    -moz-hyphens: auto;
+    -moz-hyphenate-limit-chars: 6 3 3;
+    -moz-hyphenate-limit-lines: 2;
+    -moz-hyphenate-limit-last: always;
+    -moz-hyphenate-limit-zone: 8%;
+
+    -ms-hyphens: auto;
+    -ms-hyphenate-limit-chars: 6 3 3;
+    -ms-hyphenate-limit-lines: 2;
+    -ms-hyphenate-limit-last: always;
+    -ms-hyphenate-limit-zone: 8%;
+
+    hyphens: auto;
+    hyphenate-limit-chars: 6 3 3;
+    hyphenate-limit-lines: 2;
+    hyphenate-limit-last: always;
+}
+
+@mixin no-hyphens {
+    -webkit-hyphens: none;
+    -moz-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
+}
+
 #doc {
     font-family: var(--main-font);
     font-weight: normal;
     text-rendering: optimizeLegibility;
     font-variant: oldstyle-nums;
-    hyphens: auto;
-    -webkit-hyphens: auto;
+    
+    @include hyphens;
     
     line-height: 1.55;
     max-width: 32rem;
@@ -145,8 +181,6 @@ h2 {
 
 p {
     margin-top: 0;
-    hyphens: auto;
-    -webkit-hyphens: auto;
 }
 
 em > em {
@@ -321,7 +355,7 @@ code {
     font-family: var(--code-font);
     font-variant-numeric: normal;
     font-variant-ligatures: none;
-    hyphens: none;
+    @include no-hyphens;
 }
 
 pre code {
@@ -386,8 +420,7 @@ hr {
         top: -.85em;
         max-width: 35ch;
         line-height: 1.3;
-        hyphens: none;
-        -webkit-hyphens: none;
+        @include no-hyphens;
 
         @media all and (max-with: 520px) {
             max-width: 50%;
@@ -406,39 +439,6 @@ a {
     color: var(--muted-color);
 }
 
-pre {
-    font-family: var(--code-font);
-    font-variant-ligatures: none;
-}
-
-.highlight {
-    font-family: var(--code-font);
-    font-size: 0.8rem;
-    background-color: #fbfbfb;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 0.5rem;
-    font-variant-ligatures: none;
-    font-variant-numeric: normal;
-    margin-top: 0;
-    margin-bottom: 1rem;
-
-    pre {
-        margin: 0;
-    }
-}
-
-.code-wrap {
-    overflow-x: clip;
-    pre {
-        white-space: pre-wrap;
-        white-space: -moz-pre-wrap;
-        white-space: -pre-wrap;
-        white-space: -o-pre-wrap;
-        word-wrap: break-word;
-    }
-}
-
 .abbreviation {
     position: relative;
     display: inline-block;
@@ -455,7 +455,7 @@ pre {
     text-align: center;
     font-weight: normal;
     font-style: normal;
-    hyphens: none;
+    @include no-hyphens;
     left: 50%;
     transform: translate(-50%, 0);
     max-width: 10rem;
@@ -600,7 +600,7 @@ pre {
         opacity: 0;
         // transition-property: opacity;
         z-index: 1;
-        hyphens: none;
+        @include no-hyphens;
 
         .extlink::after {
             color: rgb(255, 149, 165);
